2013-05-13  Vanessa Gil <vanessa.gil@artica.es>

	* operation/inventories/inventory_detail.php
	  operation/inventories/inventory_incidents.php
	  operation/inventories/inventory_relationship.php
	  operation/inventories/inventory_tracking: Added
	incident affecting inventory tracking.

	* operation/inventories/inventory_incident_tracking.php: Added file.

2013-05-10  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  extras/migrate.ql
	  include/constants.php
	  operation/inventories/inventory_detail.php
	  operation/inventories/inventory_incidents.php
	  operation/inventories/inventory_relationship.php: Added
	inventory tracking.

	* operation/inventories/inventory_tracking.php: Added file.

2013-05-08  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_dashboard.php: Fixed error
	with custom search now there is a filter per user.

2013-05-07  Dario Rodriguez <dario@artica.es> 

	* operation/incidents/incident_detail.php,
	include/js/integria_incident_search.js: Added a button
	to clean parent incident field

2013-05-07  Dario Rodriguez <dario@artica.es> 
2013-05-07  Vanessa Gil <vanessa.gil@artica.es>

	* operation/inventories/inventory_relationship.php,
	operation/inventories/inventory_detail.php,
	operation/inventories/inventory_search.php,
	operation/contacts/contact_detail.php,
	operation/manufacturers/manufacturer_detail.php,
	operation/incidents/incident_dashboard.php,
	operation/incidents/incident_tracking.php,
	operation/incidents/incident_detail.php,
	operation/incidents/incident_dashboard_detail.php,
	operation/contracts/contract_detail.php,
	integria_demo.sql,
	godmode/grupos/configurar_grupo.php,
	godmode/grupos/lista_grupos.php,
	include/ajax/inventories.php,
	include/functions_inventories.php,
	include/functions_calendar.php,
	include/functions_incidents.php: Bug hunting session lot
	of bug fixed related to inventory and incidents.

2013-05-06  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php,