@@ -86,5 +86,10 @@ define ('INVENTORY_CREATED', 0);
 define ('INVENTORY_UPDATED', 1);
 define ('INVENTORY_INCIDENT_ADDED', 2);
 define ('INVENTORY_OWNER_CHANGED', 3);
+define ('INVENTORY_PARENT_UPDATED', 4);
+define ('INVENTORY_PARENT_CREATED', 5);
+define ('INVENTORY_OBJECT_TYPE', 6);
+define ('INVENTORY_PUBLIC', 7);
+define ('INVENTORY_PRIVATE', 8);
 
 ?>
