@@ -1,5 +1,16 @@
 2013-05-13  Vanessa Gil <vanessa.gil@artica.es>
 
+	* include/constants.php
+	  include/functions_db.php
+	  include/functions_incidents.php
+	  operation/inventories/inventory_detail.php
+	  operation/inventories/inventory_incidents.php
+	  operation/inventories/inventory_relationship.php
+	  operation/inventories/inventory_tracking: Added
+	'object type', 'public' and 'incidents' to inventory tracking.
+
+2013-05-13  Vanessa Gil <vanessa.gil@artica.es>
+
 	* operation/inventories/inventory_detail.php
 	  operation/inventories/inventory_incidents.php
 	  operation/inventories/inventory_relationship.php
